--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,7 @@
   <div class="footer">
     <a href="/compose"><button type="button" class="btn btn-danger">Compose</button></a>
     <a>
-    <form action="/delete" method="post"><button type="submit" class="btn btn-danger">Delete</button></form></a>
+    <!-- <form action="/delete" method="post"><button type="submit" class="btn btn-danger">Delete</button></form></a> -->
     
     
   </div>
